# CppCommon

./: CMakeLists.txt
src/acme/: Color.cpp  Color.h  ccColorExtension.cpp  ccColorExtension.h
src/component/: Base.cpp  Base.h  ComponentManager.cpp  ComponentManager.h
src/component/builder/: Builder.cpp  Builder.h  BuilderComplex.cpp  BuilderComplex.h  Flags.h
src/component/common/: LifeCycle.cpp  LifeCycle.h  LifeCycleEvents.h  NotificationCatcher.cpp  NotificationCatcher.h  UpdateComponent.cpp  UpdateComponent.h
src/component/complex/model/: Counter.cpp  Counter.h
src/component/state/: Switchable.cpp  Switchable.h
src/component/touch/: Touchable.cpp  Touchable.h  TouchableEvents.h
src/component/touch/click/: Clickable.cpp  Clickable.h
src/component/touch/drag/: Draggable.cpp  Draggable.h  OnDragEvent.h
src/component/utils/: CheckComponentLifeCycle.h
src/debug/: RedDot.cpp  RedDot.h  ShowMyBoundsOnScreen.cpp  ShowMyBoundsOnScreen.h
src/event/: EventListener.cpp  EventListener.h
src/geometry/: Point.h  Rect.h  Size.h
src/memory/: RefHolder.cpp  RefHolder.h
test/gtest/: RefHolderTest.cpp
tools/: generate_r.py
wrapper/cocos2d-x-v2/: EventTouchListener.h  Ref.h  Touch.h  Vec.h  predeclare.h  wrapper.h
wrapper/cocos2d-x-v3/: EventTouchListener.h  Ref.h  Touch.h  Vec.h  predeclare.h  wrapper.h
